--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
     <a href="#steak-and-chips">Steak and Chips</a>
     <a href="#beef-and-broccoli">Beef and Broccoli</a>
 </nav>
+<div class="footer">
+    <a id="website-link" href="https://merons-portfolio.netlify.app/" target="_blank">meron();</a>
+</div>
     <div class="container">
         
 <div id="Recipes">
     <section id="spaghetti-bolognese">
 <h2 id="spag" class="text-3xl font-bold underline">Spaghetti Bolognese</h2>
-<h3 id="ingredients">Ingredients</h3>
-<ul sty="list-style-image: url('https://img.freepik.com/premium-vector/vector-green-check-mark-icon-symbol-logo-circle-tick-symbol-green-color-vector-illustration_488400-339.jpg?w=1380');">
+<h3 class="ingredients">Ingredients</h3>
+
+<div class="p-container">
+<img id="spag-img" src="https://images.ctfassets.net/uexfe9h31g3m/6QtnhruEFi8qgEyYAICkyS/ab01e9b1da656f35dd1a721c810162a0/Spaghetti_bolognese_4x3_V2_LOW_RES.jpg?w=2000&h=2000&fm=webp&fit=thumb&q=100" alt="">
+
+<ul class="ingredients-list">
 <li>1 tbsp olive oil</li>
 <li>2 medium onions, finely chopped</li>
 <li>2 garlic cloves finely chopped</li>
@@ -31,6 +38,7 @@
 <li>400g spaghetti</li>
 <li>crusty bread to serve (optional)</li>
 </ul>
+</div>
 <h3>Method</h3>
 <ul>
     <li>STEP 1: Put a large saucepan on a medium heat and add 1 tbsp olive oil.</li>
@@ -52,8 +60,11 @@
 <div id="Recipes">
     <section id="steak-and-chips">
     <h2 id="steak-chips" class="Recipe-title">Steak and Chips</h2>
-    <h3 id="ingredients">Ingredients</h3>
-    <ul class="list-style-image: url('https://img.freepik.com/premium-vector/vector-green-check-mark-icon-symbol-logo-circle-tick-symbol-green-color-vector-illustration_488400-339.jpg?w=1380');">
+    <h3 class="ingredients">Ingredients</h3>
+
+    <div class="p-container">
+    <img id="steak-and-chips-img" src="https://assets.farmison.com/images/recipe-detail-1380/114391-rib-eye-steak-and-chips.jpg" alt="">
+    <ul class="ingredients-list">
     <li>600g medium-sized King Edward potatoes or Maris Piper potatoes</li>
     <li>sunflower oil, for frying</li>
     <li>2 x 200g/8oz beef steaks</li>
@@ -64,6 +75,7 @@
     <li>small squeeze lemon juice</li>
     <li>small handful parsley leaves, finely chopped</li>
 </ul>
+</div>
     <h3>Method</h3>
     <ul>
         <li>STEP 1: First make the butter: mash all the ingredients together with lots of cracked black pepper. Pat the butter flat between cling film (it’ll chill quicker when thinner) and put in the fridge or freezer to harden.</li>
@@ -76,7 +88,7 @@
     </div>
         <form action="" class="feedback-form">
             <label for="feedback">How can we improve?</label>
-            <input type="text" name="feedback" id="Feedback" placeholder="Your feedback">
+            <textarea type="text" name="feedback" id="Feedback" placeholder="Your feedback"></textarea>
             <button>submit</button>
         </form>
     </section>
